public/app.css
* {
  margin: 0;
  padding: 0;
  font: inherit;
  box-sizing: border-box;
}

html {
  font-size: 18px;
}

a {
  text-decoration: none;
}

.navbar {
  text-align: right;
  height: 80px;
  /*background-color: navy;*/
  color: white;
  /*below from --> http://lea.verou.me/css3patterns/#carbon-fibre*/
  /*background:
  radial-gradient(black 15%, transparent 16%) 0 0,
  radial-gradient(black 15%, transparent 16%) 8px 8px,
  radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
  radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
  background-color:#282828;
  background-size:16px 16px;*/

  /* below from -> http://lea.verou.me/css3patterns/#tartan */
  background-color: hsl(2, 57%, 40%);
  background-image: repeating-linear-gradient(transparent, transparent 50px, rgba(0,0,0,.4) 50px, rgba(0,0,0,.4) 53px, transparent 53px, transparent 63px, rgba(0,0,0,.4) 63px, rgba(0,0,0,.4) 66px, transparent 66px, transparent 116px, rgba(0,0,0,.5) 116px, rgba(0,0,0,.5) 166px, rgba(255,255,255,.2) 166px, rgba(255,255,255,.2) 169px, rgba(0,0,0,.5) 169px, rgba(0,0,0,.5) 179px, rgba(255,255,255,.2) 179px, rgba(255,255,255,.2) 182px, rgba(0,0,0,.5) 182px, rgba(0,0,0,.5) 232px, transparent 232px),
  repeating-linear-gradient(270deg, transparent, transparent 50px, rgba(0,0,0,.4) 50px, rgba(0,0,0,.4) 53px, transparent 53px, transparent 63px, rgba(0,0,0,.4) 63px, rgba(0,0,0,.4) 66px, transparent 66px, transparent 116px, rgba(0,0,0,.5) 116px, rgba(0,0,0,.5) 166px, rgba(255,255,255,.2) 166px, rgba(255,255,255,.2) 169px, rgba(0,0,0,.5) 169px, rgba(0,0,0,.5) 179px, rgba(255,255,255,.2) 179px, rgba(255,255,255,.2) 182px, rgba(0,0,0,.5) 182px, rgba(0,0,0,.5) 232px, transparent 232px),
  repeating-linear-gradient(125deg, transparent, transparent 2px, rgba(0,0,0,.2) 2px, rgba(0,0,0,.2) 3px, transparent 3px, transparent 5px, rgba(0,0,0,.2) 5px);
}

#brand {
  margin-top: 14px;
  font-size: 2em;
  text-align: left;
  color: white;
}

nav li {
  display: inline;
  font-size: 1.5em;
}

nav ul {
  margin-top: 25px;
}

body {
  padding-top: 100px;
  background: linen;
  font-family: 'Raleway', sans-serif;
  margin: 0 auto;
  /* below from: http://lea.verou.me/css3patterns/#carbon */
  /*background:
  linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
  linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
  linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
  linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
  linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
  linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
  background-color: #131313;
  background-size: 20px 20px;*/
  padding-bottom: 50px;
}



.logout-button {
  display: inline-block;
}

.delete-button {
  display: inline-block;
}

.new-comment-button {
  display: inline-block;
}

.edit-button {
  display: inline-block;
}

.like-button {
  display: inline-block;
}

.login-status {
  text-align: center;
  margin-bottom: 30px;
}

.link-area {
  padding-bottom: 20px;
  width: 90%;
  margin: auto;
}

.login-area {
  padding-top: 20px;
  padding-bottom: 20px;
  border-top: firebrick 10px solid;
  border-left: firebrick 1px solid;
  border-right: firebrick 1px solid;
  border-bottom: firebrick 1px solid;
  /*border-color: firebrick;
  border-width: 1px;
  border-style: solid;*/
  /*border-radius: 15px;*/
  width: 80%;
  margin: 0px auto;
  background-color: lightgreen;
}

.login-error {
  color: red;
}

.login-success {
  color: blue;
}
.sort-choices-area {
  text-align: center;
  padding-top: 20px;
  padding-bottom: 20px;
}

.new-content-area {
  padding-top: 20px;
  padding-bottom: 20px;
  /*border-color: firebrick;
  border-width: 1px;
  border-style: solid;*/
  border-top: firebrick 10px solid;
  border-left: firebrick 1px solid;
  border-right: firebrick 1px solid;
  border-bottom: firebrick 1px solid;
  /*border-radius: 15px;*/
  width: 90%;
  margin: auto;
  margin-top: 5px;
  margin-bottom: 5px;
}

.topic-top-area {
  padding-top: 10px;
  padding-bottom: 10px;
  border-top: royalblue 10px solid;
  border-left: royalblue 1px solid;
  border-right: royalblue 1px solid;
  border-bottom: royalblue 1px solid;
  /*border-color: firebrick;
  border-width: 1px;
  border-style: solid;*/
  /*border-radius: 15px;*/
  width: 90%;
  margin: 0px auto;
  background-color: lightgreen;
  font-size: 1.3em;
}

input[type='text'] {
  width: 100%;
  height: 2rem;
  padding: 0.5rem;
  margin-top: 5px;
  margin-bottom: 5px;
}

input[type='password'] {
  width: 100%;
  height: 2rem;
  padding: 0.5rem;
  margin-top: 5px;
  margin-bottom: 5px;
}

input[type='comment'] {
  width: 100%;
  height: 2rem;
  padding: 0.5rem;
  margin-top: 5px;
  margin-bottom: 5px;
}

input[type='number'] {
  width: 100%;
  height: 2rem;
  padding-left: 0.5rem;
  margin-top: 5px;
  margin-bottom: 5px;
}

#login-button {
  margin-top: 5px;
  margin-bottom: 5px;
}

#register-button {
  margin-top: 5px;
  margin-bottom: 5px;
}

#submit-button {
  margin-top: 5px;
  margin-bottom: 5px;
}

.topic-title-description {
  font-size: 1.2em;
  background-color: #FFFFF3;
  border-top: coral 10px solid;
  border-left: coral 1px solid;
  border-right: coral 1px solid;
  width: 90%;
  margin: auto;
  padding-top: 5px;
}

.bolder {
  font-weight: bolder;
}

.topic-misc {
  background-color: #FFFFF3;
  border-left: coral 1px solid;
  border-right: coral 1px solid;
  border-bottom: coral 1px solid;
  width: 90%;
  margin: auto;
  padding-bottom: 5px;
  margin-bottom: 5px;
}

.comment-top {
  font-weight: bolder;
  font-size: 1.1em;
  font-weight: bolder;
  /*background: lightgray;
  width: 80%;*/
  width: 90%;
  margin: auto;
  margin-top: 20px;
  margin-bottom: 10px;
}

.comment-area {
  padding-top: 10px;
  padding-bottom: 10px;
  border-top: gray 10px solid;
  border-left: gray 1px solid;
  border-right: gray 1px solid;
  border-bottom: gray 1px solid;
  /*border-color: firebrick;
  border-width: 1px;
  border-style: solid;*/
  /*border-radius: 15px;*/
  width: 90%;
  margin: auto;
  margin-bottom: 5px;
  font-size: 1em;
  background-color: #FFFFF3;
}

